// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDetails renders correctly with activity data 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root css-1mgrf5c"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Program
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          No Programs
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Timeline
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          Oct 10, 1998 - Feb 26, 2021
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12 css-1wcgocn-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Types
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          Type code
        </dd>
      </div>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`ProjectDetails renders correctly with no activity data 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root css-1mgrf5c"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Program
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          No Programs
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Timeline
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          Oct 10, 1998 - Feb 26, 2021
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12 css-1wcgocn-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Types
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          No Types
        </dd>
      </div>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`ProjectDetails renders correctly with no end date (only start date) 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root css-1mgrf5c"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Program
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          No Programs
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6 css-1wyczmb-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Timeline
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          <span>
            Start Date:
          </span>
           Oct 10, 1998
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12 css-1wcgocn-MuiGrid-root"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 css-h3wl1a-MuiTypography-root"
        >
          Types
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1 css-ewuypk-MuiTypography-root"
        >
          Type code
        </dd>
      </div>
    </div>
  </dl>
</DocumentFragment>
`;
